# Gateway

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yaml  linux.yml  macos.yml  windows.yml
src/: activity_manager.rs  lib.rs  main.rs  utils.rs
src/bookmarks/: mod.rs  serializer.rs
src/filetransfer/: ftp_transfer.rs  mod.rs  scp_transfer.rs  sftp_transfer.rs
src/fs/: mod.rs
src/host/: mod.rs
src/system/: bookmarks_client.rs  environment.rs  mod.rs
src/ui/: context.rs  input.rs  mod.rs
src/ui/activities/: auth_activity.rs  filetransfer_activity.rs  mod.rs
src/ui/activities/auth_activity/: bookmarks.rs  callbacks.rs  input.rs  layout.rs  mod.rs
src/ui/activities/filetransfer_activity/: callbacks.rs  input.rs  layout.rs  misc.rs  mod.rs  session.rs
src/utils/: fmt.rs  hash.rs  mod.rs  parser.rs
