[package]
name = "gateway"
version = "0.1.0"
authors = ["Warren Galyen"]
edition = "2018"
license = "GPL-3.0"
keywords = ["scp-client", "sftp-client", "ftp-client", "winscp", "command-line-utility"]
categories = ["command-line-utilities"]
description = "a SCP/SFTP/FTPS client for command line with an integrated UI to explore the remote file system. Basically WinSCP on a terminal."
homepage = "https://github.com/warrengalyen/Gateway"
repository = "https://github.com/warrengalyen/Gateway"
readme = "README.md"

[dependencies]
crossterm = "0.18.2"
getopts = "0.2.21"
ssh2 = "0.8.2"
tui = { version = "0.12.0", features = ["crossterm"], default-features = false }
whoami = "0.9.0"
rpassword = "5.0.0"
unicode-width = "0.1.7"

[target.'cfg(any(unix, macos, linux))'.dependencies]
users = "0.11.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "gateway"
path = "src/main.rs"