[package]
name = "gateway"
version = "0.1.1"
authors = ["Warren Galyen"]
edition = "2018"
license = "GPL-3.0"
keywords = ["scp-client", "sftp-client", "ftp-client", "winscp", "command-line-utility"]
categories = ["command-line-utilities"]
description = "a SCP/SFTP/FTPS client for command line with an integrated UI to explore the remote file system. Basically WinSCP on a terminal."
homepage = "https://github.com/warrengalyen/Gateway"
repository = "https://github.com/warrengalyen/Gateway"
readme = "README.md"

[dependencies]
crossterm = "0.18.2"
ftp4 = { version = "^4.0.2", features = ["secure"] }
getopts = "0.2.21"
ssh2 = "0.9.0"
tui = { version = "0.13.0", features = ["crossterm"], default-features = false }
whoami = "1.0.0"
rpassword = "5.0.0"
unicode-width = "0.1.7"
chrono = "0.4.19"
bytesize = "1.0.1"
textwrap = "0.13.0"
regex = "1.4.2"
lazy_static = "1.4.0"
hostname = "0.3.1"

[target.'cfg(any(unix, macos, linux))'.dependencies]
users = "0.11.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "gateway"
path = "src/main.rs"

[package.metadata.rpm]
package = "gateway"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
gateway = { path = "/usr/bin/gateway" }