[package]
name = "gateway"
version = "0.1.4"
authors = ["Warren Galyen"]
edition = "2018"
license = "GPL-3.0"
keywords = ["scp-client", "sftp-client", "ftp-client", "winscp", "command-line-utility"]
categories = ["command-line-utilities"]
description = "a SCP/SFTP/FTPS client for command line with an integrated UI to explore the remote file system. Basically WinSCP on a terminal."
homepage = "https://github.com/warrengalyen/Gateway"
repository = "https://github.com/warrengalyen/Gateway"
readme = "README.md"

[dependencies]
bytesize = "1.0.1"
chrono = "0.4.19"
crossterm = "0.18.2"
dirs = "3.0.1"
ftp4 = { version = "^4.0.2", features = ["secure"] }
getopts = "0.2.21"
hostname = "0.3.1"
lazy_static = "1.4.0"
regex = "1.4.2"
rpassword = "5.0.0"
serde = { version = "1.0.118", features = ["derive"] }
ssh2 = "0.9.0"
textwrap = "0.13.0"
toml = "0.5.7"
tui = { version = "0.13.0", features = ["crossterm"], default-features = false }
unicode-width = "0.1.7"
whoami = "1.0.0"

[target.'cfg(any(target_os = "unix", target_os = "macos", target_os = "linux"))'.dependencies]
users = "0.11.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "gateway"
path = "src/main.rs"

[package.metadata.rpm]
package = "gateway"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
gateway = { path = "/usr/bin/gateway" }